
 - On platforms where a stack overflow does not trigger a SIGSEGV, ECL was
   unable to recover from the overflow. Now it jumps to the outermost
   protection frame (typically the toplevel).

 - Socket streams are now two-way streams. This solves a problem with certain
   platforms (OS X) where a C stream can not be used to read and write
   simultaneously by two different threads.

* Visible changes:

 - Hash tables now use hand-coded specialized loops for EQ, EQL, EQUAL, EQUALP
   and package types, achieving a reduction of about 30% time in lookups.

 - A new function EXT:ENVIRON returns the list of strings that makes up the
   process environment. This is the equivalent of POSIX (char **environ)
   and Windows' GetEnvironmentStrings.

 - EXT:RUN-PROGRAM now accepts a keyword argument, :ENVIRON, with a list of
   strings used to configure the environment of the child process. For instance
   '("PWD=/home" "PATH=/usr/bin")

 - EXT:RUN-PROGRAM returns as third value an EXT:EXTERNAL-PROCESS structure,
   which supports the queries EXT:EXTERNAL-PROCESS-{PID,INPUT,OUTPUT,STATUS},
   following CCL's conventions.

 - The new function EXT:EXTERNAL-PROCESS-WAIT can be used to wait indefinitely
   for termination of a process or simply to query its status.

 - ECL implements a new garbage collector marking mode which at the overhead of
   one word per object achieves precise marking of heap objects, reducing
   accidental data retention and improving the time spent in garbage
   collection. This mode is only available when using --enable-boehm=system at
   configuration time.

 - ECL now ships with ASDF version 1.604

 - The variables C:*USER-CC-FLAGS* and C:*USER-LD-FLAGS* are lists of strings
   which can used to change the behavior of the C compiler and the
   linker. Note, however, that the flags that ECL uses may take priority.

 - In the C code we are beginning to use GCC's attributes (__attribute__) and